--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "server",
   "main": "src/app/app.js",
   "scripts": {
-    "start": "node src/app/app.js",
+    "start": "nodemon src/app/app.js",
     "dev": "nodemon src/app/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2"
+  },
   "devDependencies": {
     "nodemon": "^3.0.3"
   }
