--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "server",
   "main": "src/app/app.js",
   "scripts": {
-    "start": "nodemon src/app/app.js",
+    "start": "node src/app/app.js",
     "dev": "nodemon src/app/app.js"
   },
   "keywords": [],
